fixes announcement pushing content off screen

--- a/src/resources/static_files/stylesheets/Display.css
+++ b/src/resources/static_files/stylesheets/Display.css
@@ -40,6 +40,8 @@ html, body {
 .content-container {
     flex-grow: 1;
     display: flex;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .blackout-container {
@@ -87,8 +89,8 @@ html, body {
 .scores-table-container {
     flex-grow: 1;
     background-image: url("../images/olympus_unearthed_theme_background.png");
-    background-repeat: repeat-y;
-    background-size: 100% auto;
+    background-size: contain;
+    background-repeat: no-repeat;
     /* background-color: #e5ae32; */
     display: grid;
     grid-template-columns: 3.125% auto 1fr auto 1fr 15.625% 3.125%;
